{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 19,
  "lineage": "07cb6fd5-5aec-4507-9c4a-6d5743112405",
  "resources": [
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:route-table/rtb-057ad79a8be209dfb",
            "id": "rtb-057ad79a8be209dfb",
            "owner_id": "154309361967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-private",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "dev-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "dev-private",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "dev-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-02210946619eddf47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7987caed08920c8",
            "route_table_id": "rtb-057ad79a8be209dfb",
            "subnet_id": "subnet-038643b13c70d7b24"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group__private.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d131a14bb8b3a95",
            "route_table_id": "rtb-057ad79a8be209dfb",
            "subnet_id": "subnet-078c76bb6e445b9f5"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group__private.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8ea26ee93895e63",
            "id": "r-rtb-0cd5fc2ace003311c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cd5fc2ace003311c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:route-table/rtb-0cd5fc2ace003311c",
            "id": "rtb-0cd5fc2ace003311c",
            "owner_id": "154309361967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-public",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "dev-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "dev-public",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "dev-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-02210946619eddf47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686f9082d0ecb603",
            "route_table_id": "rtb-0cd5fc2ace003311c",
            "subnet_id": "subnet-0235613b9c1a589ce"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group__public.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e3f1ab7f9a5e6dc",
            "route_table_id": "rtb-0cd5fc2ace003311c",
            "subnet_id": "subnet-0b03b2cc2bbeb5b62"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group__public.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group__private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-private-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:subnet/subnet-038643b13c70d7b24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038643b13c70d7b24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "154309361967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "dev-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "dev-private-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "dev-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-02210946619eddf47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "dev-private-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:subnet/subnet-078c76bb6e445b9f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078c76bb6e445b9f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "154309361967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "dev-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "dev-private-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "dev-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-02210946619eddf47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group__public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev-public-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:subnet/subnet-0235613b9c1a589ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0235613b9c1a589ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "154309361967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "dev-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "dev-public-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "dev-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-02210946619eddf47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "dev-public-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:subnet/subnet-0b03b2cc2bbeb5b62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b03b2cc2bbeb5b62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "154309361967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "dev-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "dev-public-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "dev-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-02210946619eddf47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:internet-gateway/igw-0b8ea26ee93895e63",
            "id": "igw-0b8ea26ee93895e63",
            "owner_id": "154309361967",
            "tags": {
              "Name": "dev",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "dev",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "dev",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "dev",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-02210946619eddf47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:154309361967:vpc/vpc-02210946619eddf47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0689ba50cbfe337e8",
            "default_route_table_id": "rtb-08fd36544dc139f10",
            "default_security_group_id": "sg-0d18c7340fdbdb573",
            "dhcp_options_id": "dopt-04ded84d2124c7a58",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02210946619eddf47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fd36544dc139f10",
            "owner_id": "154309361967",
            "tags": {
              "Name": "dev",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "dev",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "dev",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "dev",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            }
          }
        }
      ]
    }
  ]
}